test/expected/declare_rro_exclam_k_b.out
declare ! as rvalue reference operator (S) returning bool
                                        ^
41: error: member operator "!" must have exactly 0 parameters
